--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
   dropdown_button2: ^2.3.9
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  google_sign_in: ^6.2.2
   intl: ^0.19.0
   provider: ^6.1.2
   table_calendar: ^3.1.2
