--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   google_sign_in: ^6.2.2
   intl: ^0.19.0
   provider: ^6.1.2
+  share_plus: ^10.1.2
+  shared_preferences: ^2.3.3
   table_calendar: ^3.1.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -56,9 +59,10 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/icons/
     - assets/icons/filled/
     - assets/icons/outlined/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
