--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,21 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^5.5.0
+  cupertino_icons: ^1.0.8
   dropdown_button2: ^2.3.9
+  emoji_picker_flutter: ^3.1.0
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
   intl: ^0.19.0
   provider: ^6.1.2
+  share_plus: ^10.1.2
+  shared_preferences: ^2.3.3
   table_calendar: ^3.1.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
