--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^18.0.1
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
   intl: ^0.19.0
@@ -43,6 +44,7 @@ dependencies:
   share_plus: ^10.1.2
   shared_preferences: ^2.3.3
   table_calendar: ^3.1.2
+  timezone: ^0.10.0
   url_launcher: ^6.3.1
 
 dev_dependencies:
