--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^5.5.0
+  connectivity_plus: ^6.1.2
   cupertino_icons: ^1.0.8
   dropdown_button2: ^2.3.9
   emoji_picker_flutter: ^3.1.0
@@ -41,7 +42,10 @@ dependencies:
   glassmorphism: ^3.0.0
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.19.0
+  path_provider: ^2.1.5
   provider: ^6.1.2
   share_plus: ^10.1.2
   shared_preferences: ^2.3.3
@@ -69,7 +73,6 @@ flutter:
     - assets/icons/filled/white_mode/
     - assets/icons/filled/dark_mode/
     - assets/icons/outlined/
-    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
