--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,16 +38,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^18.0.1
+  flutter_markdown: ^0.7.5
   flutter_svg: ^2.0.16
   glassmorphism: ^3.0.0
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  in_app_review: ^2.0.10
   intl: ^0.19.0
+  package_info_plus: ^8.1.3
   path_provider: ^2.1.5
   provider: ^6.1.2
-  share_plus: ^10.1.2
+  share_plus: ^10.1.4
   shared_preferences: ^2.3.3
   table_calendar: ^3.1.2
   timezone: ^0.10.0
