target page developed

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.ladder_up"
+    namespace = "com.example.progress_tracker"
     compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
