--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
   flutter_local_notifications: ^18.0.1
   flutter_markdown: ^0.7.5
   flutter_svg: ^2.0.16
@@ -76,6 +77,14 @@ flutter:
     - assets/icons/filled/white_mode/
     - assets/icons/filled/dark_mode/
     - assets/icons/outlined/
+
+flutter_launcher_icons:
+  android: "my_progress"
+  ios: false
+  image_path: "assets/icons/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/logo_foreground.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
