Complete Theme Overall & Dark Mode Support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,18 +67,20 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-    - assets/icons/filled/white_mode/
-    - assets/icons/filled/dark_mode/
+    - assets/icons/filled/
     - assets/icons/outlined/
     - assets/wallpapers/
+    - assets/images/
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+        - asset: assets/fonts/Inter-Bold.ttf
+          weight: 700
+
 
 flutter_launcher_icons:
   android: "my_progress"
